temp fix widgets collapse

--- a/src/components/widgets/style.module.scss
+++ b/src/components/widgets/style.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   &.spinner {
     margin-top: 100px;
@@ -14,6 +15,9 @@
 
   .printBtn {
     margin: 30px 0;
+    position: absolute;
+    padding-bottom: 30px;
+    bottom: -180px;
 
     @media print {
       display: none;
